# SistemadeMachineLearning

./: README.md  requirements.txt
.devcontainer/: devcontainer.json
Aprendisaje-Supervisado/: DEPLOY.md  app.py  ml_system.db  pyproject.toml  replit.md  requirements.txt
Aprendisaje-Supervisado/ml_models/: data_handler.py  decision_tree.py  logistic.py  report_generator.py
Aprendisaje-Supervisado/static/: index.html  style.css
Aprendizaje-Supervisado/: app.py  package-lock.json  package.json  pyproject.toml  render.yaml  replit.md  requirements.txt
Aprendizaje-Supervisado/ml_models/: data_handler.py  decision_tree.py  logistic.py  regression.py  report_generator.py
Aprendizaje-Supervisado/static/: index.html  script.js  style.css
AuthStream/: app.db  app.py  auth.py  comparacion_modelos.py  exportar_datos.py  hyperparameter_tuning.py  modelos.py  preprocesamiento.py  pyproject.toml  replit.md  reportes.py  session_history.py
AuthStream/attached_assets/: Pasted-Desarrollar-una-aplicaci-n-web-interactiva-usando-Streamlit-Python-que-implemente-autenticaci--1760232536780_1760232536781.txt
