[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "bcrypt>=5.0.0",
    "flask>=3.1.2",
    "flask-cors>=6.0.1",
    "matplotlib>=3.10.7",
    "numpy>=2.3.3",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pillow>=11.3.0",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.1.1",
    "reportlab>=4.4.4",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
]
